add auth jwt + role based